[gd_scene load_steps=5 format=3 uid="uid://ddg3o7u8jv8m5"]

[ext_resource type="Script" path="res://Scenes/Entities/drone.gd" id="1_kkduo"]

[sub_resource type="CircleShape2D" id="CircleShape2D_hdnpc"]
radius = 2.23607

[sub_resource type="CircleShape2D" id="CircleShape2D_c6hgb"]

[sub_resource type="SphereMesh" id="SphereMesh_rawbs"]

[node name="Drone" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_kkduo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_hdnpc")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 5.0
target_desired_distance = 12.0
path_postprocessing = 1

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 0.6
autostart = true

[node name="ScanTimer" type="Timer" parent="."]
autostart = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.15
autostart = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_c6hgb")

[node name="MeshInstance2D" type="MeshInstance2D" parent="."]
visible = false
position = Vector2(0, 1.42997e-06)
scale = Vector2(8.00907, 8.00907)
mesh = SubResource("SphereMesh_rawbs")

[connection signal="target_reached" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_target_reached"]
[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
[connection signal="timeout" from="ScanTimer" to="." method="_on_scan_timer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
